	* tests/pkg-test.sh: Added test for pkg action handler.
	* tests/metadata-test.sh, tests/metadata-regex-test.sh,
	tests/find-test.sh, tests/find-regex-test.sh: Consolidate the separate
	-regex-test.sh files into their respective tests.
	* tests/dev-test.sh, tests/herd-test.sh, tests/away-test.sh,
	tests/which-test.sh: Added more test runs to test --regex and to test
	the 'all' target.
	* tests/metadata-test.sh: Added ambigious package test.

2005-09-13 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/portage/herd.cc, herdstat/portage/developer.cc: Fixed copy
	constructors (weren't copying all members) which was causing various
	stuff to break.
	* herdstat/util/functors.hh: Add Dereference functor.

	* herdstat/portage/herd.cc, herdstat/portage/herd.hh,
	herdstat/portage/developer.cc, herdstat/portage/developer.hh: Use
	vector of pointers for our herd/developer containers.
	* herdstat/portage/metadata.xml.hh: Don't implicitly convert to
	metadata as it looks like the copy constructor is invoked.  Added a
	data() member instead that returns a const reference.
	* herdstat/portage/herds_xml.cc, herdstat/portage/herds_xml.hh,
	herdstat/portage/devaway_xml.cc, herdstat/portage/devaway_xml.hh,
	herdstat/portage/metadata.cc, herdstat/portage/metadata.hh: Updated
	with herd/developer design changes.
	* herdstat/util/functors.hh: Added DereferenceStrLess,
	DereferenceStrGreater, and DereferenceStrEqual template functors for
	comparing a pointer of a certain type against a std::string.  Also
	added DeleteAndNullify functor for cleaning up containers of pointers
	with a simple std::for_each call.

2005-09-12 Aaron Walker <ka0ttic@gentoo.org>

	* Makefile.am.common: Added more warning flags: -Woverloaded-virtual
	-Winline -Wredundant-decls.
	* src/herds_xml.cc, src/devaway_xml.cc: Add back the missing fetch
	logic I forgot to add when rewriting the herds_xml class, so that if
	fetching fails, we can use the cached copy.