@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE catmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<catmetadata>
+	<longdescription lang="en">
+		The sys-libs category contains various system-level libraries.
+	</longdescription>
+	<longdescription lang="es">
+		La categoría sys-libs contiene varias librerías del sistema.
+	</longdescription>
+	<longdescription lang="de">
+		Die Kategorie sys-libs enthält verschiedene Systembibliotheken.
+	</longdescription>
+	<longdescription lang="nl">
+		De sys-libs categorie bevat verschillende systeembibliotheken.
+	</longdescription>
+	<longdescription lang="vi">
+		Nhóm sys-libs chứa các thư viện cấp hệ thống.
+	</longdescription>
+</catmetadata>
+
